--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,6 +7,9 @@ secondary:
     url: /accessibility
   - text: Colophon
     url: /colophon
+  - text: hello@jdkunesh.com
+    url: mailto://hello@jdkunesh.com?subject=Hello!
+    external: true
   - text: LinkedIn
     url: http://www.linkedin.com/in/jdkunesh/
     external: true
